<resources>
    <string name="app_name">DOCTRINA</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    LoginFragment-->
    <string name="hello">Привет!</string>
    <string name="to_get_start">Чтобы начать, введите свой e-mail</string>
    <string name="your_email_g">youremail@gogogo.com</string>
    <string name="close_button">email closing</string>
    <string name="next">Дальше</string>
    <string name="at_the_next">на следующем этапе вам нужно будет ввести код, который будет отправлен на указанный вами адрес электронной почты </string>
    <string name="please_enter">пожалуйста введите правильный e-mail</string>

    <!--    LoginCodeConfirmationFragment-->
    <string name="enter_the_c">Введите код из письма</string>
    <string name="change"><![CDATA[Изменить >>>]]></string>
    <string name="paste_the_c">вставьте код, отправленный на адрес </string>
    <string name="please_enter_code">пожалуйста, введите правильный код</string>

    <!--    WebFragment-->
    <string name="add_to_favourite">Любимое</string>
    <string name="back_button_web">back btn web</string>
    <string name="choose_a_le">выбери тематику</string>
    <string name="your_setting">ваши настройки</string>
    <string name="log_out">выйти</string>
    <string name="no_internet">отсутствует\nинтернет соединение</string>
    <string name="no_content">к сожалению все материалы подгружаются динамически из интернета. без него мы не сможем отбразить весь контент.</string>
    <string name="refresh">обновить</string>
    <string name="header_materials">ВЫБЕРИ ПРОГРАММУ</string>
    <string name="header_feedback">ВОПРОСЫ</string>
    <string name="header_settings">ВАШИ НАСТРОЙКИ</string>

</resources>