<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            tools:context=".presentation.fragments.LoginFragment">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/frontImage"
                android:layout_width="match_parent"
                android:layout_height="360dp"
                android:scaleType="fitXY"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/hiChampTextView"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="293dp"
                android:gravity="center"
                android:lineSpacingExtra="23sp"
                android:text="@string/hello"
                android:textAllCaps="true"
                android:textAppearance="@style/hi_champ_"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frontImage" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/toGetStartTextView"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:lineSpacingExtra="28sp"
                android:text="@string/enter_the_c"
                android:textAllCaps="true"
                android:textAppearance="@style/to_get_start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hiChampTextView" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/numbersLinear"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="20sp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20sp"
                android:orientation="horizontal"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toGetStartTextView">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/firstNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:maxLength="1"
                    android:inputType="number"
                    android:imeOptions="actionNext"
                    android:textAlignment="center"
                    android:textColor="@color/yellow"
                    android:textColorHint="@color/grey"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="20sp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/secondNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:maxLength="1"
                    android:inputType="number"
                    android:imeOptions="actionNext"
                    android:letterSpacing="0.1"
                    android:textAlignment="center"
                    android:textColor="@color/yellow"
                    android:textColorHint="@color/grey"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="20sp"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/thirdNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:maxLength="1"
                    android:inputType="number"
                    android:imeOptions="actionNext"
                    android:letterSpacing="0.1"
                    android:textAlignment="center"
                    android:textColor="@color/yellow"
                    android:textColorHint="@color/grey"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="20sp"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/fourthNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:maxLength="1"
                    android:inputType="number"
                    android:imeOptions="actionNext"
                    android:letterSpacing="0.1"
                    android:textAlignment="center"
                    android:textColor="@color/yellow"
                    android:textColorHint="@color/grey"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="20sp"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/fifthNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:maxLength="1"
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    android:letterSpacing="0.1"
                    android:textAlignment="center"
                    android:textColor="@color/yellow"
                    android:textColorHint="@color/grey"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="20sp"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/nextLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="261dp"
                android:orientation="horizontal"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/numbersLinear">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/nextTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/next"
                    android:textAllCaps="true"
                    android:textAppearance="@style/next_" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/arrowRight"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/arrow_right" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/paste_the_c"
                android:textAppearance="@style/paste_the_c"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nextLinearLayout" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/changeBtn"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:letterSpacing="0.2"
                android:text="@string/change"
                android:textAllCaps="true"
                android:textColor="@color/yellow"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/message"
                tools:ignore="AllCaps" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>

